# FlightRecorder

./: .gitattributes  .gitignore  LICENSE  README.md  sonar-project.properties
.github/workflows/: dotnetcore.yml
Balsamiq/: Sighting Entry Wizard.bmpr
docker/: Dockerfile  README.md
docker/api/: Dockerfile  README.md
docker/ui/: Dockerfile  README.md
reports/: README.md  aircraft_type_trends.ipynb  airline_aircraft_heatmap.ipynb  make_venv.bat  make_venv.sh  manufacturer_aircraft_heatmap.ipynb  manufacturer_aircraft_pie_chart.ipynb  manufacturer_popularity.ipynb  pyproject.toml  requirements.txt  run_all.sh  run_notebook.sh  sightings_over_time.ipynb  top_airlines_over_time.ipynb  top_manufacturers_and_models.ipynb  top_routes.ipynb  update.sh
reports/sql/: manufacturer_sightings.sql  sightings.sql
src/: .editorconfig  FlightRecorder.Api.sln  FlightRecorder.Mvc.sln  FlightRecorder.sln  FlightRecorderDb.sln  requirements.txt  resetconfig.py
src/FlightRecorder.Api/: Example.csv  FlightRecorder.Api.csproj  FlightRecorder.Api.sln  Program.cs  Startup.cs  appsettings.json
src/FlightRecorder.BusinessLogic/: FlightRecorder.BusinessLogic.csproj  FlightRecorder.BusinessLogic.sln
src/FlightRecorder.Client/: FlightRecorder.Client.csproj
src/FlightRecorder.Data/: FlightRecorder.Data.csproj  FlightRecorderDbContext.cs  FlightRecorderDbContextFactory.cs
src/FlightRecorder.DataExchange/: AirportExporter.cs  AirportImporter.cs  CsvExporter.cs  CsvImporter.cs  FlightRecorder.DataExchange.csproj  IDataImporter.cs  SightingsExportProcessor.cs
(+563 files in other folders)
